--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/home"
+    <item android:id="@+id/nav_home"
         android:title="Home"
         android:icon="@drawable/home"/>
 
-    <item android:id="@+id/book"
+    <item android:id="@+id/nav_book"
         android:title="Book"
         android:icon="@drawable/book"/>
 
-    <item android:id="@+id/account"
+    <item android:id="@+id/nav_account"
         android:title="Account"
         android:icon="@drawable/user"/>
 
