--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Account"
+        android:background="@color/colorPrimary"
         android:textSize="30sp"
         android:textColor="@color/black"/>
 
