--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -4,6 +4,10 @@
         android:title="Home"
         android:icon="@drawable/home"/>
 
+    <item android:id="@+id/nav_bitcoin"
+        android:title="Bitcoin"
+        android:icon="@drawable/bitcoin"/>
+
     <item android:id="@+id/nav_book"
         android:title="Book"
         android:icon="@drawable/book"/>
