--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,40 +98,38 @@
                     android:gravity="center"
                     android:layout_marginTop="16dp"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
+                        android:padding="10dp"
                         android:background="@drawable/button_bg"
                         android:color="@android:color/transparent"
+                        android:drawableLeft="@drawable/share_btn"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/black"
                         android:text="Share App"
                         android:textAllCaps="false"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
+
                     <Button
-                        android:id="@+id/rateus"
+                        android:id="@+id/telegram"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
+                        android:padding="10dp"
                         android:background="@drawable/button_bg"
                         android:color="@android:color/transparent"
-                        android:text="Rate Us"
-                        android:textAllCaps="false"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"/>
-                    <Button
-                        android:id="@+id/tg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_bg"
-                        android:color="@android:color/transparent"
+                        android:drawableLeft="@drawable/ic_telegram_black_24dp"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/black"
                         android:text="Join Telegram Channel"
                         android:textAllCaps="false"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
