--- a/app/src/main/res/layout/basic_iteam.xml
+++ b/app/src/main/res/layout/basic_iteam.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/iteamtext"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
