--- a/app/src/main/res/layout/activity_basic_next.xml
+++ b/app/src/main/res/layout/activity_basic_next.xml
@@ -11,11 +11,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:weightSum="5"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/next_image"
+            android:padding="8dp"
+            android:layout_margin="8dp"
+            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/next_tetx"
             android:textSize="24sp"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
     </ScrollView>
 
