--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -29,11 +29,11 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    android:padding="5dp"
                     android:background="@drawable/basic_bg"
-                    android:layout_height="match_parent">
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/upstox_logo"
@@ -45,40 +45,44 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="upstox"
+                        android:padding="10dp"
+                        android:text="Upstox"
                         android:textColor="@color/black"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:padding="10dp"
                         android:text="featurs"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
                     <Button
                         android:layout_width="wrap_content"
-                        android:text="Open Accpount"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:padding="5dp"
+                        android:background="@drawable/button_bg"
+                        android:drawableRight="@drawable/open"
+                        android:drawablePadding="10dp"
+                        android:padding="10dp"
+                        android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:background="@drawable/button_bg"
-                        android:drawablePadding="10dp"
-                        android:drawableRight="@drawable/open"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
-                    android:background="@drawable/basic_bg"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    android:layout_height="match_parent">
+                    android:background="@drawable/basic_bg"
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/angel_logo"
@@ -90,9 +94,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="upstox"
+                        android:text="Angle Broking"
                         android:textColor="@color/black"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -101,29 +106,31 @@
                         android:text="featurs"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
+
                     <Button
                         android:layout_width="wrap_content"
-                        android:text="Open Accpount"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
+                        android:background="@drawable/button_bg"
+                        android:drawableRight="@drawable/open"
+                        android:drawablePadding="10dp"
                         android:padding="5dp"
+                        android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:background="@drawable/button_bg"
-                        android:drawablePadding="10dp"
-                        android:drawableRight="@drawable/open"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:background="@drawable/basic_bg"
+                    android:orientation="vertical"
 
-                    android:layout_height="match_parent">
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/zerodha_logo"
@@ -135,9 +142,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="upstox"
+                        android:text="Zerodha"
                         android:textColor="@color/black"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -149,17 +157,17 @@
 
                     <Button
                         android:layout_width="wrap_content"
-                        android:text="Open Accpount"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
+                        android:background="@drawable/button_bg"
+                        android:drawableRight="@drawable/open"
+                        android:drawablePadding="10dp"
                         android:padding="5dp"
+                        android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:background="@drawable/button_bg"
-                        android:drawablePadding="10dp"
-                        android:drawableRight="@drawable/open"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
