--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="colorPrimary">#FF9800</color>
     <color name="splash_bg">#fef6ca</color>
+    <color name="screen_bg">#C5C5C5</color>
 </resources>
