--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -96,6 +96,7 @@
                         android:layout_gravity="center"
                         android:text="Angle Broking"
                         android:textColor="@color/black"
+                        android:padding="10dp"
                         android:textSize="30sp"
                         android:textStyle="bold" />
 
@@ -103,6 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:padding="10dp"
                         android:text="featurs"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
@@ -143,6 +145,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Zerodha"
+                        android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -152,6 +155,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="featurs"
+                        android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -171,6 +175,9 @@
 
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"/>
 
             </LinearLayout>
 
