--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -177,7 +177,7 @@
 
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/basic_bg"
                     android:drawableRight="@drawable/headphones"
                     android:drawablePadding="10dp"
@@ -186,6 +186,9 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"/>
 
             </LinearLayout>
 
