--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -68,6 +68,7 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="10dp"
+                        android:id="@+id/open_upstox"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -117,6 +118,7 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="5dp"
+                        android:id="@+id/open_angle"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -167,6 +169,7 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="5dp"
+                        android:id="@+id/open_zerodha"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
