--- a/app/src/main/res/layout/activity_basic.xml
+++ b/app/src/main/res/layout/activity_basic.xml
@@ -10,5 +10,15 @@
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
+       android:layout_height="wrap_content"/>
+
+   <com.mopub.mobileads.MoPubView
+       android:id="@+id/adview"
+       android:layout_width="match_parent"
+       android:layout_height="70dp"
+       android:layout_centerHorizontal="true"
+       android:layout_alignParentBottom="true"
+       app:moPubAdSize="match_view">
+   </com.mopub.mobileads.MoPubView>
+
 </LinearLayout>
