--- a/app/src/main/res/layout/activity_candle.xml
+++ b/app/src/main/res/layout/activity_candle.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CandleActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewc_candle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <com.mopub.mobileads.MoPubView
+    android:id="@+id/adview"
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:layout_centerHorizontal="true"
+    android:layout_alignParentBottom="true"
+    app:moPubAdSize="match_view">
+  </com.mopub.mobileads.MoPubView>
+
+</LinearLayout>
