--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,5 +48,19 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:menu="@menu/main_act" />-->
 
+    <com.mopub.mobileads.MoPubView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/adview"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
+        app:moPubAdSize="match_view">
+
+    </com.mopub.mobileads.MoPubView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
