--- a/app/src/main/res/layout/candle_iteam.xml
+++ b/app/src/main/res/layout/candle_iteam.xml
@@ -4,14 +4,18 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:layout_margin="8dp"
+    android:gravity="center_vertical"
     android:background="@drawable/basic_bg"
     android:orientation="vertical">
 
 
     <ImageView
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:layout_weight="2"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_height="200dp"
         android:id="@+id/img_can"/>
 
     <TextView
