--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="10dp"
-                        android:text="featurs"
+                        android:text="@string/angel_fe"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -157,7 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="featurs"
+                        android:text="@string/zerodha_fe"
                         android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
