--- a/app/src/main/res/layout/activity_basic.xml
+++ b/app/src/main/res/layout/activity_basic.xml
@@ -10,6 +10,8 @@
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
+       android:padding="8dp"
+
        android:layout_height="wrap_content"/>
 
    <RelativeLayout
