--- a/app/src/main/res/layout/activity_candle.xml
+++ b/app/src/main/res/layout/activity_candle.xml
@@ -21,7 +21,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:padding="5dp"
-        android:text="Download Trading App for More..."
+        android:text="अजून माहितीसाठी डाऊनलोड करा ट्रेडिंग मराठी ॲप"
         android:gravity="center"/>
 
     <com.mopub.mobileads.MoPubView
