--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,7 +52,7 @@
                     android:layout_margin="8dp"
                     android:background="@drawable/button_bg"
                     android:color="@android:color/transparent"
-                    android:text="Basics"
+                    android:text="शेअर मार्केट बेसिक"
                     android:textSize="16sp"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
@@ -65,7 +65,7 @@
                     android:layout_margin="8dp"
                     android:background="@drawable/button_bg"
                     android:color="@android:color/transparent"
-                    android:text="Questions And Answers"
+                    android:text="काही प्रश्न उत्तरे"
                     android:textSize="16sp"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
@@ -78,7 +78,7 @@
                     android:layout_margin="8dp"
                     android:background="@drawable/button_bg"
                     android:color="@android:color/transparent"
-                    android:text="Candlestick basics"
+                    android:text="कॅन्डल स्टिक बेसिक"
                     android:textSize="16sp"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
@@ -92,7 +92,7 @@
                     android:background="@drawable/button_bg"
                     android:color="@android:color/transparent"
                     android:textSize="16sp"
-                    android:text="Learn Trading"
+                    android:text="ट्रेडिंग शिका"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
@@ -116,7 +116,7 @@
                         android:drawablePadding="10dp"
                         android:drawableTint="@color/black"
                         android:textSize="16sp"
-                        android:text="Share App"
+                        android:text="शेअर ऍप"
                         android:textAllCaps="false"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
@@ -133,7 +133,7 @@
                         android:drawablePadding="10dp"
                         android:drawableTint="@color/black"
                         android:textSize="16sp"
-                        android:text="Join Telegram Channel"
+                        android:text="टेलिग्राम चैनल जॉईन करा"
                         android:textAllCaps="false"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
