--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,23 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/splash_bg"
     android:gravity="center"
+    android:orientation="vertical"
     android:padding="16dp"
     tools:context=".SplashActivity">
+
 
     <ImageView
         android:layout_width="489dp"
         android:layout_height="392dp"
-        android:padding="70dp"
+        android:padding="50dp"
         android:scaleType="centerCrop"
         android:src="@drawable/logo" />
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:text="@string/app_name"
+        android:gravity="center"
+        android:text="मराठी माणसाने बनवलेलं मराठी माणसासाठी"
         android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold" />
